@@ -1,2 +1,0 @@
-'httpclient' gives something like the functionality of libwww-perl (LWP) in
-Ruby.  'httpclient' formerly known as 'http-access2'.
